Skip to content
GitLab
  • Explore
  • Sign in
  • Register
  • PulseAudioPulseAudio
  • pulseaudiopulseaudio
  • Issues
  • #840

RAOP fails when firewall blocks incoming UDP timing packets

Summary

After having received the first RECORD request the AV receiver starts to send timing RTP packets to the timing port (6002), where are rejected by the firewall, and after a 30 second timeout the receiver responds with a 'RTSP/1.0 500 Internal Server Error'.

environment

openSUSE Tumbleweed 20200331 pulseaudio 13.99.0 firewalld Pioneer VSX-924 AV Receiver

Steps to reproduce

Connect a RAOP capable device to the net -> device is discovered via dns-sd/mDNS -> move a stream to the discovered RAOP device

What is the current bug behavior?

RTSP handshake starts Timing UDP packet from the receiver is ICMP-rejected

What is the expected correct behavior?

Punch a hole into the firewall using connection tracking, sent an initial timing packet.

No firewall: raop_firewall_inactive.pcapng

Firewall active, UDP ports closed: raop_firewall_active.pcapng

Fixed behaviour: raop_firewall_active_initial_sync.pcapng

To upload designs, you'll need to enable LFS and have an admin enable hashed storage. More information
Assignee
Assign to
Time tracking